force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__HMDA_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Record_Type__c</fullName>
    <description>This field is used to determine which HMDA route/field set (2017 or 2018) will be presented to the user for this loan when collecting HMDA Loan and Entity Compliance information.</description>
    <inlineHelpText>HMDA Loan Purpose</inlineHelpText>
    <label>HMDA Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HMDA-Effective-2017</fullName>
                <default>true</default>
                <label>HMDA-Effective-2017</label>
            </value>
            <value>
                <fullName>HMDA-Effective-2018</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>