force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Index__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Index__c</fullName>
    <description>This field is optional. It is manually selected. It is used to specify the index the lending rate follows.</description>
    <label>Index</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ARM</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>LIBOR</fullName>
            </value>
            <value>
                <fullName>Treasury Constant Maturity - 1 Year +</fullName>
            </value>
            <value>
                <fullName>Treasury Constant Maturity - 2 Year +</fullName>
            </value>
            <value>
                <fullName>Treasury Constant Maturity - 3 Year +</fullName>
            </value>
            <value>
                <fullName>Treasury Constant Maturity - 5 Year +</fullName>
            </value>
            <value>
                <fullName>Treasury Constant Maturity - 7 Year +</fullName>
            </value>
            <value>
                <fullName>Treasury Constant Maturity - 10 Year +</fullName>
            </value>
            <value>
                <fullName>WSJ Prime</fullName>
            </value>
            <value>
                <fullName>Treasury Constant Maturity - 1 Year %2B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>