force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Index_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Index_Value__c</fullName>
    <description>The system automatically populates this optional percentage field with information from the Pricing Matrix.</description>
    <inlineHelpText>This system-populated field displays the current index value percentage.</inlineHelpText>
    <label>Index Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>