force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Interest_Paid_To_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interest_Paid_To_Date__c</fullName>
    <description>This field is optional. It is manually populated. It is used to the specify the date through which interest has been paid.</description>
    <label>Interest Paid To Date</label>
    <type>Date</type>
</CustomField>