force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__InterestRate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__InterestRate__c</fullName>
    <description>This field is required. It is manually populated. It defines the interest rate for this loan at the time of origination/closing.</description>
    <inlineHelpText>Total interest rate to the borrower, including prime</inlineHelpText>
    <label>Interest Rate</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>