force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Approved__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is automatically selected. This field is utilized for trigger approval process actions that add loan team members to the loan for the user to view. Loan team members are populated from queues and users chosen to approve items.</description>
    <inlineHelpText>This field is utilized for trigger approval process actions that add loan team members
            to the loan for the user to view. Loan Team Members are populated from queues and users
            chosen to approve items.</inlineHelpText>
    <label>ApprovalTriggerField</label>
    <type>Checkbox</type>
</CustomField>