force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Copy__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is automatically selected via trigger. When enabled, it indicates that the loan was created from the copy functionality. When disabled, the loan was not created from copy functionality. By default, it is disabled.</description>
    <label>Is Copy</label>
    <type>Checkbox</type>
</CustomField>