force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_ELOC__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_ELOC__c</fullName>
    <description>This field identifies an ELOC type loan. Depending on configuration, this field is used to specify the structure associated to ELOC loans, and whether that structure is multi-tiered or a single loan. Automatically populated when an ELOC product is selected</description>
    <formula>IF(ISPICKVAL(LLC_BI__Structure__c, &apos;ELOC&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is ELOC</label>
    <type>Checkbox</type>
</CustomField>