force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Excluded__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Excluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Excluded</label>
    <type>Checkbox</type>
</CustomField>