force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Lease__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Lease__c</fullName>
    <description>This formula checkbox field auto-populates and indicates if the loan facility is a lease.</description>
    <formula>IF(LLC_BI__Product_Reference__r.LLC_BI__Product_Feature__c != null &amp;&amp; LLC_BI__Product_Reference__r.LLC_BI__Product_Feature__r.LLC_BI__Is_Lease__c == true, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lease</label>
    <type>Checkbox</type>
</CustomField>