force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Letter_of_Credit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Letter_of_Credit__c</fullName>
    <description>This field is automatically selected via trigger. When enabled, it indicates if the loan is a letter of credit. When disabled, it indicates a loan is not a letter of credit. By default, it is disabled.</description>
    <formula>IF(ISPICKVAL(LLC_BI__Structure__c, &apos;Letter of Credit&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Letter of Credit</label>
    <type>Checkbox</type>
</CustomField>