force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should be set to be automatically populated via a workflow. It should be enabled by any workflow that would lock a loan for editing, such as when the loan enters the approval process. It should be disabled when the loan is not supposed to be locked. By default, it is disabled.</description>
    <inlineHelpText>Indicate if the loan is locked for editting.</inlineHelpText>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>