force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Modification__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Modification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is automatically selected via trigger. When enabled, it indicates that the loan was created from the modification functionality. When disabled, the loan was not created as a modification. By default, it is disabled.</description>
    <label>Is_Modification</label>
    <type>Checkbox</type>
</CustomField>