force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Multi_Level_Future__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Multi_Level_Future__c</fullName>
    <description>This field is automatically selected via formula. When enabled, it indicates that this loan is part of a multi-level future. When disabled, the loan is not part of a multi-level future. By default, it is disabled.</description>
    <formula>IF(ISPICKVAL(LLC_BI__Structure__c, &apos;Multi Level Future&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Multi Level Future</label>
    <type>Checkbox</type>
</CustomField>