force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_No_Action_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_No_Action_Placeholder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This boolean field is automatically set by the system. When true, it indicates that the record is a link from a No Action Loan to its placeholder in its original hierarchy. The default value is false.</description>
    <label>Is No Action Placeholder</label>
    <type>Checkbox</type>
</CustomField>