force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Original_Inactive_Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Original_Inactive_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The facility structure was originally deactivated on this loan.</description>
    <inlineHelpText>The facility structure was originally deactivated on this loan.</inlineHelpText>
    <label>Is Original Declined Loan</label>
    <type>Checkbox</type>
</CustomField>