force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Ready_To_Transmit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Ready_To_Transmit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is automatically selected via trigger. When enabled, a the loan meets the stage and status requirements that a financial institution considers &quot;Ready to Transmit.&quot; This allows loan data to be transmitted to the CUSO. When disabled, a loan does not met these requirements. By default, it is disabled.</description>
    <label>Is Ready to Transmit</label>
    <type>Checkbox</type>
</CustomField>