force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Regular_Future__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Regular_Future__c</fullName>
    <description>This field is auto-populated and indicates a regular-future type loan and its associated structure. Depending on configuration, this field specifies whether that structure can be multi-tiered or a single loan.</description>
    <formula>IF(ISPICKVAL(LLC_BI__Structure__c, &apos;Regular Future&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Regular Future</label>
    <type>Checkbox</type>
</CustomField>