force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Review_Ready__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Review_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field can be set to be automatically selected via workflow. When enabled, it indicates a loan is ready to review. When disabled, a loan is not ready for review. By default, it is disabled.</description>
    <label>Is Review Ready</label>
    <type>Checkbox</type>
</CustomField>