force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_SBA__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_SBA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users manually populate this optional text field. This field indicates whether or not the loan is a SBA loan.</description>
    <inlineHelpText>Populate this field to indicate if this is a SBA loan.</inlineHelpText>
    <label>Is SBA</label>
    <type>Checkbox</type>
</CustomField>