force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Secured__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Secured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is automatically selected via trigger. It is enabled when the loan has collateral pledged and indicates that the loan has been secured by collateral. When disabled, it indicates that the loan has not been secured by collateral. By default, it is disbaled.</description>
    <inlineHelpText>Is Loan Secured With Collateral</inlineHelpText>
    <label>Is Secured</label>
    <type>Checkbox</type>
</CustomField>