force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Sublimit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Sublimit__c</fullName>
    <description>This field is auto-populated and identifies if the loan level is a Sublimit or the third level in a multi-tiered hierarchy. Product Package must be utilized to support multi-tiered loans. Note that sublimits are found below limits.</description>
    <formula>IF(ISPICKVAL(LLC_BI__Structure_Hierarchy__c, &apos;Sub Limit&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Sublimit</label>
    <type>Checkbox</type>
</CustomField>