force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Syndication__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Syndication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This optional boolean field is manually populated. Set this value to true if the loan is a syndication.</description>
    <label>Is Syndication</label>
    <type>Checkbox</type>
</CustomField>