force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Is_Term_Loan_Current__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Term_Loan_Current__c</fullName>
    <description>This field is auto-populated and indicates a Current Term loan type and the associated structure. Depending on configuration, this field specifies whether that structure is multi-tiered or a single loan; the default is a single level loan.</description>
    <formula>IF(ISPICKVAL(LLC_BI__Structure__c, &apos;Term Loan/Current&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Term Loan/Current</label>
    <type>Checkbox</type>
</CustomField>