force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__isClosed__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__isClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field has been deprecated in favor of LLC_BI__Is_Closed__c.</description>
    <label>isClosed</label>
    <type>Checkbox</type>
</CustomField>