force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__isRenewal__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__isRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is automatically selected via trigger. When enabled, it indicates that the loan was created from the renewal functionality. When disabled, the loan was not created as a renewal. By default, it is disabled.</description>
    <label>isRenewal</label>
    <type>Checkbox</type>
</CustomField>