force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Last_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Last_Pay_Date__c</fullName>
    <description>This field is optional. It is manually populated. It is used to specify the date of the last payment received.</description>
    <label>Last Pay Date</label>
    <type>Date</type>
</CustomField>