force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Lead_Detail__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Lead_Detail__c</fullName>
    <description>This field is optional. It is manually populated. This is a free form text field used to specify details or comments about the lead.</description>
    <label>Lead Detail</label>
    <type>TextArea</type>
</CustomField>