force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Lead_Specifics__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Lead_Specifics__c</fullName>
    <description>This field is optional. It is manually populated, but can be set up to populate when converting a lead. This field is a picklist used to indifcate the specifics regarding the lead. If provided, the value must match one of the values in the Lead Specifics picklist established for this financial institution.</description>
    <label>Lead Specifics</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LLC_BI__LeadSource__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>