force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__LeadSource__c</fullName>
    <description>This field is optional. It is manually populated, but can be set up to be populated when converting a lead. This field is a picklist used to specify the source of the lead. If provided, the value must match one of the values in the Lead Source picklist established for this financial institution.</description>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Current Customer</fullName>
            </value>
            <value>
                <fullName>Direct Call</fullName>
            </value>
            <value>
                <fullName>Email Campaign</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Industry Professional</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prior Origination</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>Word of Mouth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>