force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Legal_Firm__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Legal_Firm__c</fullName>
    <description>This field is optional. It is manually populated. It is used to specify the legal firm associated with loan closing. If provided, the value must match one of the values in the Legal Firm picklist established for this financial institution.</description>
    <label>Legal Firm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sample Firm</fullName>
            </value>
            <value>
                <fullName>Sample Firm 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>