force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Loan_Class__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Class__c</fullName>
    <description>This field is optional. It is manually populated. It is used to specify what class this loan is in, if it is new, refinanced, etc.</description>
    <label>Loan Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Loan</fullName>
            </value>
            <value>
                <fullName>Secured Renewal</fullName>
            </value>
            <value>
                <fullName>Unsecured Renewal</fullName>
            </value>
            <value>
                <fullName>Refinance Existing Loan With Lender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>