force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Loan_Collateral_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Collateral_Aggregate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is automatically populated when creating Collateral Mgmt. It is used to store aggregate information for all collateral management records on the loan.</description>
    <inlineHelpText>Aggregate object that links all collateral to the loan</inlineHelpText>
    <label>Loan Collateral Aggregate</label>
    <referenceTo>LLC_BI__Loan_Collateral_Aggregate__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>