force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Loan_Detail__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this lookup field to link a Loan record to its corresponding Loan Details record.</description>
    <inlineHelpText>This lookup field contains the associated Loan Detail record&apos;s Id.</inlineHelpText>
    <label>Loan Detail</label>
    <referenceTo>LLC_BI__Loan_Detail__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>