force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Loan_Officer__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is automatically populated with the user who converts a lead or creates a new loan from a relationship. This field is used to specify the loan&apos;s originating loan officer.</description>
    <label>Loan Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>