force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Lost_Detail__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Lost_Detail__c</fullName>
    <description>This field is optional. It is manually populated. This field is a free form text area that contains details about why a loan opportunity was lost, including rate, covenants, etc.</description>
    <inlineHelpText>What rate, etc?</inlineHelpText>
    <label>Lost Detail</label>
    <type>TextArea</type>
</CustomField>